@@ -35,6 +35,7 @@ TRANSLATE_DOMAIN = 31
 TRANSLATE_STATEFUL = 32
 TRANSLATE_FASTCGI = 33
 TRANSLATE_VIEW = 34
+TRANSLATE_VARY = 35
 
 class PacketReader:
     def __init__(self):
